--- a/layout/activity_match.xml
+++ b/layout/activity_match.xml
@@ -31,6 +31,7 @@
             android:layout_marginTop="22dp"
             app:cardCornerRadius="4dp"
             android:tooltipText="Scoreboard"
+            android:onClick="scoreBoard"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/matchName">
 
@@ -682,7 +683,7 @@
                     android:layout_height="41dp"
                     android:layout_marginStart="3dp"
                     android:layout_marginLeft="3dp"
-                    android:layout_marginTop="1dp"
+                    android:layout_marginTop="7dp"
                     android:background="#651FFF"
                     android:onClick="noBall"
                     android:text="3+No Ball"
@@ -710,7 +711,7 @@
                     android:layout_height="36dp"
                     android:layout_marginStart="6dp"
                     android:layout_marginLeft="6dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="10dp"
                     android:background="#651FFF"
                     android:onClick="lb"
                     android:text="1+lb"
@@ -724,7 +725,7 @@
                     android:layout_height="37dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="10dp"
                     android:background="#651FFF"
                     android:onClick="lb"
                     android:text="2+lb"
@@ -734,11 +735,11 @@
 
                 <Button
                     android:id="@+id/button19"
-                    android:layout_width="63dp"
-                    android:layout_height="42dp"
+                    android:layout_width="69dp"
+                    android:layout_height="33dp"
                     android:layout_marginStart="5dp"
                     android:layout_marginLeft="5dp"
-                    android:layout_marginTop="6dp"
+                    android:layout_marginTop="10dp"
                     android:background="#651FFF"
                     android:onClick="lb"
                     android:text="3+lb"
@@ -752,7 +753,7 @@
                     android:layout_height="35dp"
                     android:layout_marginStart="14dp"
                     android:layout_marginLeft="14dp"
-                    android:layout_marginTop="11dp"
+                    android:layout_marginTop="10dp"
                     android:background="#651FFF"
                     android:onClick="lb"
                     android:text="4+lb"
